Add Forex API and ETH currency, minor fixes

--- a/src/main/resources/message/ru/settings.json
+++ b/src/main/resources/message/ru/settings.json
@@ -3,7 +3,7 @@
     "root": "Выберите настройку которую хотите изменить",
     "language": "Выберите удобный вам язык, по умолчанию он определяется из языка устройства.\n\nТекущий язык: *%s* (`%s`)",
     "defaultCurrency": "Выберите валюту по умолчанию если в выражении не указано ни одной другой валюты. Полный список валют зависит от выбранного API (%s), см. /apis\n\nТекущая валюта по умолчанию: *%s*",
-    "defaultApi": "Выберите API курсов валют по умолчанию для расчета значений, см. /apis для подробной информации.\n\nТекущее API: *%s* (`%s`)",
+    "defaultApi": "Выберите API курсов валют по умолчанию для расчета значений, см. /apis для подробной информации.\n\nТекущее API: *%s* (`%s`)\nНедоступные валюты: %s",
     "outputCurrencies": "Выберите список валют для вывода по умолчанию, если валюта уже в списке, при нажатии она удалится оттуда. Список валют зависит от выбранного API (%s), см. /apis\n\n*Текущие валюты:\n* %s",
     "dashboardCurrencies": "Выберите список выбора валют для отображения полного списка курсов при пустом inline запросе, если валюта уже в списке, при нажатии она удалится оттуда. Список валют зависит от выбранного API (%s), см. /apis. \n\n*Текущие валюты:*\n %s",
     "decimalDigits": "Выберите число знаков после запятой для отображения.\n\nТекущее значение: *%d* (`%s`)"
