Add stats logging, fix issues, fix GAE logging

--- a/platform-gcp/app-engine/src/main/appengine/app.yaml
+++ b/platform-gcp/app-engine/src/main/appengine/app.yaml
@@ -1,5 +1,5 @@
 runtime: java11
-entrypoint: 'java -jar server.jar'
+entrypoint: 'java -jar -Djava.util.logging.config.file=/workspace/logging.properties server.jar'
 inbound_services:
   - warmup
 automatic_scaling:
