--- a/platform-gcp/app-engine/src/main/appengine/app.yaml
+++ b/platform-gcp/app-engine/src/main/appengine/app.yaml
@@ -9,6 +9,10 @@ automatic_scaling:
   max_instances: 1
 env_variables:
   FILL###ME###UP
-#  BOT_TOKEN: <bot_token>
-#  BOT_USERNAME: <username of bot>
-#  CREATOR_ID: <id of owner>
+  #  BOT_TOKEN: <bot_token>
+  #  BOT_USERNAME: <username of bot>
+  #  CREATOR_ID: <id of owner>
+  # FIXER_ACCESS_KEY: <token for api>
+  # OPENEXCHANGERATES_ACCESS_KEY: <token for api>
+  # TRADERMADE_ACCESS_KEY: <token for api>
+  # FOREX_ACCESS_KEY: <token for api>
