Add change settings inline button

--- a/exchange-rates/src/main/resources/message/be/settings.json
+++ b/exchange-rates/src/main/resources/message/be/settings.json
@@ -20,5 +20,6 @@
     "checked": "✅ %s",
     "back": "↩️️ Назад",
     "close": "⏹ Зачыніць"
-  }
+  },
+  "customiseSettingsLabel": "Змяніць налады"
 }
