--- a/exchange-rates/src/main/resources/message/en/settings.json
+++ b/exchange-rates/src/main/resources/message/en/settings.json
@@ -20,5 +20,6 @@
     "checked": "✅ %s",
     "back": "↩️️ Back",
     "close": "⏹ Close"
-  }
+  },
+  "customiseSettingsLabel": "Customise settings"
 }
