--- a/exchange-rates/src/main/resources/message/pl/settings.json
+++ b/exchange-rates/src/main/resources/message/pl/settings.json
@@ -20,5 +20,6 @@
     "checked": "✅ %s",
     "back": "↩️️ Powrót",
     "close": "⏹ Zamknij"
-  }
+  },
+  "customiseSettingsLabel": "Zmodyfikować ustawienia"
 }
