--- a/exchange-rates/src/main/resources/message/ru/settings.json
+++ b/exchange-rates/src/main/resources/message/ru/settings.json
@@ -20,5 +20,6 @@
     "checked": "✅ %s",
     "back": "↩️️ Назад",
     "close": "⏹ Закрыть"
-  }
+  },
+  "customiseSettingsLabel": "Изменить настройки"
 }
