--- a/exchange-rates/src/main/resources/message/uk/settings.json
+++ b/exchange-rates/src/main/resources/message/uk/settings.json
@@ -20,5 +20,6 @@
     "checked": "✅ %s",
     "back": "↩️️ Назад",
     "close": "⏹ Закрити"
-  }
+  },
+  "customiseSettingsLabel": "Зміна налаштувань"
 }
