Migrate to java17 runtime, add thousandSeparator setting

--- a/exchange-rates/src/main/resources/message/be/settings.json
+++ b/exchange-rates/src/main/resources/message/be/settings.json
@@ -6,7 +6,8 @@
     "defaultApi": "Абярыце API курсаў валют па змаўчанні для разліку значэнняў, гл. /apis для падрабязнаяй інфармацыі.\n\nАктуальнае API: *%s* (`%s`)\nНедаступныя валюты: %s",
     "outputCurrencies": "Абярыце спіс валют для вывада па змаўчанні, калі валюта ўжо ў спісе, пры націску яна выдаліцца адтуль. Спіс валют залежыць ад абранага API (%s), гл. /apis\n\n*Актуальныя валюты:\n* %s",
     "dashboardCurrencies": "Абярыце спіс выбару валют для адлюстравання поўнага спісу курсаў пры пустом inline запыце, калі валюта ўжо ў спісе, пры націску яна выдаліцца адтуль. Спіс валют залежыць ад абранага API (%s), гл. /apis. \n\n*Актуальныя валюты:*\n %s",
-    "decimalDigits": "Абярыце колькасць знакаў пасля коскі для адлюстравання.\n\nАктуальнае значэнне: *%d* (`%s`)"
+    "decimalDigits": "Абярыце колькасць знакаў пасля коскі для адлюстравання.\n\nАктуальнае значэнне: *%d* (`%s`)",
+    "thousandSeparator": "Абярыце сімвал для раздзелу тысяч для вялікіх лікаў.\n\nУ гэты час адлюстроўваецца як: `%s`"
   },
   "rootButtons": {
     "language": "Мова паведамленняў",
@@ -14,7 +15,8 @@
     "defaultCurrency": "Валюта па змаўчанні",
     "outputCurrencies": "Валюты для адлюстравання",
     "dashboardCurrencies": "Валюты пры пустом inline запыце",
-    "decimalDigits": "Колькасць знакаў пасля коскі"
+    "decimalDigits": "Колькасць знакаў пасля коскі",
+    "thousandSeparator": "Раздзельнік тысяч"
   },
   "buttons": {
     "checked": "✅ %s",
