--- a/exchange-rates/src/main/resources/message/ru/settings.json
+++ b/exchange-rates/src/main/resources/message/ru/settings.json
@@ -6,7 +6,8 @@
     "defaultApi": "Выберите API курсов валют по умолчанию для расчета значений, см. /apis для подробной информации.\n\nТекущее API: *%s* (`%s`)\nНедоступные валюты: %s",
     "outputCurrencies": "Выберите список валют для вывода по умолчанию, если валюта уже в списке, при нажатии она удалится оттуда. Список валют зависит от выбранного API (%s), см. /apis\n\n*Текущие валюты:\n* %s",
     "dashboardCurrencies": "Выберите список выбора валют для отображения полного списка курсов при пустом inline запросе, если валюта уже в списке, при нажатии она удалится оттуда. Список валют зависит от выбранного API (%s), см. /apis. \n\n*Текущие валюты:*\n %s",
-    "decimalDigits": "Выберите число знаков после запятой для отображения.\n\nТекущее значение: *%d* (`%s`)"
+    "decimalDigits": "Выберите число знаков после запятой для отображения.\n\nТекущее значение: *%d* (`%s`)",
+    "thousandSeparator": "Выберите символ для разделения тысяч для больших чисел.\n\nВ настоящее время отображается как: `%s`"
   },
   "rootButtons": {
     "language": "Язык сообщений",
@@ -14,7 +15,8 @@
     "defaultCurrency": "Валюта по умолчанию",
     "outputCurrencies": "Валюты для отображения",
     "dashboardCurrencies": "Валюты при пустом inline запросе",
-    "decimalDigits": "Число знаков после запятой"
+    "decimalDigits": "Число знаков после запятой",
+    "thousandSeparator": "Разделитель тысяч"
   },
   "buttons": {
     "checked": "✅ %s",
