--- a/exchange-rates/src/main/resources/message/uk/settings.json
+++ b/exchange-rates/src/main/resources/message/uk/settings.json
@@ -6,7 +6,8 @@
     "defaultApi": "Оберіть API курсів валют за замовчуванням для розрахунку значень, див. /apis для докладної інформації.\n\nПоточний API: *%s* (`%s`)\nНедоступні валюти: %s",
     "outputCurrencies": "Оберіть список валют для виведення за замовчуванням, якщо валюта вже у списку, при натисканні вона видалиться звідти. Список валют залежить від обраного API (%s), див. /apis\n\n*Поточні валюти:\n* %s",
     "dashboardCurrencies": "Оберіть список вибору валют для відображення повного списку курсів при пустому inline запиті, якщо валюта вже у списку, при натисканні вона видалиться звідти. Список валют залежить від обраного API (%s), див. /apis. \n\n*Поточні валюти:*\n %s",
-    "decimalDigits": "Оберіть число знаків після коми для відображення.\n\nПоточне значення: *%d* (`%s`)"
+    "decimalDigits": "Оберіть число знаків після коми для відображення.\n\nПоточне значення: *%d* (`%s`)",
+    "thousandSeparator": "Оберіть символ для розділення тисяч для великих чисел.\n\nВ даний час відображається як: `%s`"
   },
   "rootButtons": {
     "language": "Мова повідомлень",
@@ -14,7 +15,8 @@
     "defaultCurrency": "Валюта за замовчуванням",
     "outputCurrencies": "Валюти для відображення",
     "dashboardCurrencies": "Валюти при пустому inline запиті",
-    "decimalDigits": "Число знаків після коми"
+    "decimalDigits": "Число знаків після коми",
+    "thousandSeparator": "Роздільник тисяч"
   },
   "buttons": {
     "checked": "✅ %s",
