Add initial implementation for rate alerts (dev only)

--- a/exchange-rates/src/main/resources/message/be/settings.json
+++ b/exchange-rates/src/main/resources/message/be/settings.json
@@ -7,7 +7,8 @@
     "outputCurrencies": "Абярыце спіс валют для вывада па змаўчанні, калі валюта ўжо ў спісе, пры націску яна выдаліцца адтуль. Спіс валют залежыць ад абранага API (%s), гл. /apis\n\n*Актуальныя валюты:\n* %s",
     "dashboardCurrencies": "Абярыце спіс выбару валют для адлюстравання поўнага спісу курсаў пры пустом inline запыце, калі валюта ўжо ў спісе, пры націску яна выдаліцца адтуль. Спіс валют залежыць ад абранага API (%s), гл. /apis. \n\n*Актуальныя валюты:*\n %s",
     "decimalDigits": "Абярыце колькасць знакаў пасля коскі для адлюстравання.\n\nАктуальнае значэнне: *%d* (`%s`)",
-    "thousandSeparator": "Абярыце сімвал для раздзелу тысяч для вялікіх лікаў.\n\nУ гэты час адлюстроўваецца як: `%s`"
+    "thousandSeparator": "Абярыце сімвал для раздзелу тысяч для вялікіх лікаў.\n\nУ гэты час адлюстроўваецца як: `%s`",
+    "alerts": "У вас усталявана *%d* апавяшчэнняў.\n\nДля стварэння новага апавяшчэння. Новыя апавяшчэнні можна дадаць праз каманды /alert\\_delta або /alert\\_rate (гл. /help). \n\n⚠\uFE0F Пры націску на кнопку апавяшчэння яно будзе выдалена назаўсёды."
   },
   "rootButtons": {
     "language": "Мова паведамленняў",
@@ -16,7 +17,8 @@
     "outputCurrencies": "Валюты для адлюстравання",
     "dashboardCurrencies": "Валюты пры пустом inline запыце",
     "decimalDigits": "Колькасць знакаў пасля коскі",
-    "thousandSeparator": "Раздзельнік тысяч"
+    "thousandSeparator": "Раздзельнік тысяч",
+    "alerts": "\uD83D\uDEA8 Апавяшчэнні"
   },
   "buttons": {
     "checked": "✅ %s",
