--- a/exchange-rates/src/main/resources/message/pl/settings.json
+++ b/exchange-rates/src/main/resources/message/pl/settings.json
@@ -7,7 +7,8 @@
     "outputCurrencies": "Proszę o wybór listy walut rozwijanych domyślnie, jeżeli waluta jest już na liście, po wciśnieniu zostanie skasowana. Lista walut zależy od wybranego API (%s), zobacz /apis\n\n*Aktualne waluty:\n* %s",
     "dashboardCurrencies": "Proszę o wskazanie listy walut wyświetlanej jako pełna lista kursów wymiany w razie pustego inline zapytania, jeżeli waluta jest już na liście, po wciśnieniu zostanie skasowana. Lista walut zależy od wybranego API (%s), zobacz /apis. \n\n*Aktualne waluty:*\n %s",
     "decimalDigits": "Proszę o wskazanie liczby miejsc po przecinku do wyświetlenia.\n\nAktualna liczba: *%d* (`%s`)",
-    "thousandSeparator": "Proszę o wskazanie symbolu do oddzielenia tysięcy dla dużych liczb.\n\nAktualnie wyświetlane jako: `%s`"
+    "thousandSeparator": "Proszę o wskazanie symbolu do oddzielenia tysięcy dla dużych liczb.\n\nAktualnie wyświetlane jako: `%s`",
+    "alerts": "Masz obecnie ustawione *%d* alertów.\n\nAby ustawić nowy alert. Nowe alerty można dodać za pomocą poleceń /alert\\_delta lub /alert\\_rate (zobacz /help). \n\n⚠\uFE0F Kliknięcie przycisku alertu spowoduje jego"
   },
   "rootButtons": {
     "language": "Język wiadomości",
