--- a/exchange-rates/src/main/resources/message/ru/settings.json
+++ b/exchange-rates/src/main/resources/message/ru/settings.json
@@ -7,7 +7,8 @@
     "outputCurrencies": "Выберите список валют для вывода по умолчанию, если валюта уже в списке, при нажатии она удалится оттуда. Список валют зависит от выбранного API (%s), см. /apis\n\n*Текущие валюты:\n* %s",
     "dashboardCurrencies": "Выберите список выбора валют для отображения полного списка курсов при пустом inline запросе, если валюта уже в списке, при нажатии она удалится оттуда. Список валют зависит от выбранного API (%s), см. /apis. \n\n*Текущие валюты:*\n %s",
     "decimalDigits": "Выберите число знаков после запятой для отображения.\n\nТекущее значение: *%d* (`%s`)",
-    "thousandSeparator": "Выберите символ для разделения тысяч для больших чисел.\n\nВ настоящее время отображается как: `%s`"
+    "thousandSeparator": "Выберите символ для разделения тысяч для больших чисел.\n\nВ настоящее время отображается как: `%s`",
+    "alerts": "У вас установлено *%d* уведомлений.\n\nЧтобы установить новое уведомление. Новые уведомления можно добавить через команды /alert\\_delta или /alert\\_rate (см. /help). \n\n⚠\uFE0F Нажатие на кнопку уведомления приведет к его безвозвратному удалению."
   },
   "rootButtons": {
     "language": "Язык сообщений",
@@ -16,7 +17,8 @@
     "outputCurrencies": "Валюты для отображения",
     "dashboardCurrencies": "Валюты при пустом inline запросе",
     "decimalDigits": "Число знаков после запятой",
-    "thousandSeparator": "Разделитель тысяч"
+    "thousandSeparator": "Разделитель тысяч",
+    "alerts": "\uD83D\uDEA8 Уведомления"
   },
   "buttons": {
     "checked": "✅ %s",
