--- a/exchange-rates/src/main/resources/message/uk/settings.json
+++ b/exchange-rates/src/main/resources/message/uk/settings.json
@@ -7,7 +7,8 @@
     "outputCurrencies": "Оберіть список валют для виведення за замовчуванням, якщо валюта вже у списку, при натисканні вона видалиться звідти. Список валют залежить від обраного API (%s), див. /apis\n\n*Поточні валюти:\n* %s",
     "dashboardCurrencies": "Оберіть список вибору валют для відображення повного списку курсів при пустому inline запиті, якщо валюта вже у списку, при натисканні вона видалиться звідти. Список валют залежить від обраного API (%s), див. /apis. \n\n*Поточні валюти:*\n %s",
     "decimalDigits": "Оберіть число знаків після коми для відображення.\n\nПоточне значення: *%d* (`%s`)",
-    "thousandSeparator": "Оберіть символ для розділення тисяч для великих чисел.\n\nВ даний час відображається як: `%s`"
+    "thousandSeparator": "Оберіть символ для розділення тисяч для великих чисел.\n\nВ даний час відображається як: `%s`",
+    "alerts": "У вас встановлено *%d* сповіщень.\n\nЩоб встановити нове сповіщення. Нові сповіщення можна додати через команди /alert\\_delta або /alert\\_rate (див. /help). \n\n⚠\uFE0F Натискання на кнопку сповіщення призведе до його остаточного видалення."
   },
   "rootButtons": {
     "language": "Мова повідомлень",
@@ -16,7 +17,8 @@
     "outputCurrencies": "Валюти для відображення",
     "dashboardCurrencies": "Валюти при пустому inline запиті",
     "decimalDigits": "Число знаків після коми",
-    "thousandSeparator": "Роздільник тисяч"
+    "thousandSeparator": "Роздільник тисяч",
+    "alerts": "\uD83D\uDEA8 Сповіщення"
   },
   "buttons": {
     "checked": "✅ %s",
